--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "graphql": "15.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
     "@types/react": "16.9.19",
@@ -22,5 +22,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
