--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@apollo/client": "3.0.0-beta.43",
     "graphql": "15.0.0",
+    "graphql-anywhere": "^4.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1"
